Lucene Benchmark Contrib Change Log

The Benchmark contrib package contains code for benchmarking Lucene in a variety of ways.

03/10/2011
  LUCENE-2961: Removed lib/xml-apis.jar, since JVM 1.5+ already contains the
  JAXP 1.3 interface classes it provides.

02/05/2011
  LUCENE-1540: Improvements to contrib.benchmark for TREC collections. 
  ContentSource can now process plain text files, gzip files, and bzip2 files.
  TREC doc parsing now handles the TREC gov2 collection and TREC disks 4&5-CR 
  collection (both used by many TREC tasks). (Shai Erera, Doron Cohen)

01/31/2011
  LUCENE-1591: Rollback to xerces-2.9.1-patched-XERCESJ-1257.jar to workaround
  XERCESJ-1257, which we hit on current Wikipedia XML export
  (ENWIKI-20110115-pages-articles.xml) with xerces-2.10.0.jar.   (Mike McCandless)

01/26/2011
  LUCENE-929: ExtractReuters first extracts to a tmp dir and then renames. That 
  way, if a previous extract attempt failed, "ant extract-reuters" will still 
  extract the files. (Shai Erera, Doron Cohen, Grant Ingersoll)

01/24/2011
  LUCENE-2885: Add WaitForMerges task (calls IndexWriter.waitForMerges()).
  (Mike McCandless)

10/10/2010
  The locally built patched version of the Xerces-J jar introduced
  as part of LUCENE-1591 is no longer required, because Xerces
  2.10.0, which contains a fix for XERCESJ-1257 (see
  http://svn.apache.org/viewvc?view=revision&revision=554069),
  was released earlier this year.  Upgraded
  xerces-2.9.1-patched-XERCESJ-1257.jar and xml-apis-2.9.0.jar
  to xercesImpl-2.10.0.jar and xml-apis-2.10.0.jar. (Steven Rowe)

8/2/2010
  LUCENE-2582: You can now specify the default codec to use for
  writing new segments by adding default.codec = Pulsing (for
  example), in the alg file.  (Mike McCandless)

4/27/2010: WriteLineDocTask now supports multi-threading. Also, 
  StringBufferReader was renamed to StringBuilderReader and works on 
  StringBuilder now. In addition, LongToEnglishContentSource starts from 0